--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -35,7 +35,7 @@ A stress-strain curve is derived from a simple tensile test, and it is often use
 
 {% figure 'fig-2-1' %}
 
-([fig. 2.2](#fig-2-2)) illustrates the results of a tensile test with the time dimension added. The first graph ([fig. 2.2a](#fig-2-2)) shows the strain history as millistrain versus time, and indicates that the strain rate, *R*, is constant during the constant speed test due to the low failure strain. At higher strains, the strain rate would measurably decrease during a constant speed test due to the changing length of the sample. The second graph ([fig. 2.2b](#fig-2-2)) gives stress versus time, and the third ([fig. 2.2c](#fig-2-2)) presents a stress-strain curve. The latter shows a secant modulus, *E~s~* (at strain ε = 0.005), and the strain at failure ε~f~. Secant modulus can be a useful measure of stiffness due to nonlinearity caused by relaxation during the tensile test.
+([fig. 2.2](#fig-2-2)) illustrates the results of a tensile test with the time dimension added. The first graph ([fig. 2.2a](#fig-2-2)) shows the strain history as millistrain versus time, and indicates that the strain rate, *R*, is constant during the constant speed test due to the low failure strain. At higher strains, the strain rate would measurably decrease during a constant speed test due to the changing length of the sample. The second graph ([fig. 2.2b](#fig-2-2)) gives stress versus time, and the third ([fig. 2.2c](#fig-2-2)) presents a stress-strain curve. The latter shows a secant modulus, *E<sub>s</sub>* (at strain ε = 0.005), and the strain at failure ε<sub>f</sub>. Secant modulus can be a useful measure of stiffness due to nonlinearity caused by relaxation during the tensile test.
 
 {% figure 'fig-2-2' %}
 
@@ -53,7 +53,7 @@ The addition of relative humidity (RH) fluctuations in ([fig. 2.4](#fig-2-4)) hi
 
 #### *Time-temperature superposition*
 
-Over a wide range of test conditions, it is impractical to summarize tensile data from a viscoelastic material with stress-strain curves. It is also not feasible to measure the full relaxation behavior from glassy to rubbery—a process occurring over many decades—at one temperature, due to equipment limitations and time constraints. In ([fig. 2.1](#fig-2-1)), it is clear that a relationship exists between strain rate and temperature, since increasing the rate by an order of magnitude is equivalent to decreasing temperature by 10°C. This implies that time-temperature superposition (TTS) is a potential tool for efficiently summarizing data ({% cite 'Williams, Landel, and Ferry 1955' %}). To illustrate this method, ([fig. 2.5a](#fig-2-5)) shows a simplified summary of modulus values at three temperatures and four strain rates within a practical test window. This test window is bounded by equipment limitations and practical time available for data collection. ([fig. 2.5b](#fig-2-5)) shows the result of fixing data at a chosen reference temperature, *T~ref~* = 20°C, and horizontally shifting data at the other temperatures to line up as a single master curve. The result shows a shift from glassy to rubbery behavior over a broader scale than the experiments allowed in direct measurement. Tabulated results of the horizontal shift factor versus temperature allow one to create a master curve at any *T~ref~* of interest within data limits. Defining *T~ref~* at the glass transition temperature, *T~g~*, would also allow comparison with theoretical functions, and possible extrapolation to temperatures beyond the test conditions. There are many reasons why the simple TTS method may not work for certain materials; however, it is a powerful tool when it does.
+Over a wide range of test conditions, it is impractical to summarize tensile data from a viscoelastic material with stress-strain curves. It is also not feasible to measure the full relaxation behavior from glassy to rubbery—a process occurring over many decades—at one temperature, due to equipment limitations and time constraints. In ([fig. 2.1](#fig-2-1)), it is clear that a relationship exists between strain rate and temperature, since increasing the rate by an order of magnitude is equivalent to decreasing temperature by 10°C. This implies that time-temperature superposition (TTS) is a potential tool for efficiently summarizing data ({% cite 'Williams, Landel, and Ferry 1955' %}). To illustrate this method, ([fig. 2.5a](#fig-2-5)) shows a simplified summary of modulus values at three temperatures and four strain rates within a practical test window. This test window is bounded by equipment limitations and practical time available for data collection. ([fig. 2.5b](#fig-2-5)) shows the result of fixing data at a chosen reference temperature, *T<sub>ref</sub>* = 20°C, and horizontally shifting data at the other temperatures to line up as a single master curve. The result shows a shift from glassy to rubbery behavior over a broader scale than the experiments allowed in direct measurement. Tabulated results of the horizontal shift factor versus temperature allow one to create a master curve at any *T<sub>ref</sub>* of interest within data limits. Defining *T<sub>ref</sub>* at the glass transition temperature, *T<sub>g</sub>*, would also allow comparison with theoretical functions, and possible extrapolation to temperatures beyond the test conditions. There are many reasons why the simple TTS method may not work for certain materials; however, it is a powerful tool when it does.
 
 {% figure 'fig-2-5' %}
 
@@ -67,14 +67,14 @@ The concepts discussed in this section are often studied using a technique calle
 
 The purpose of using tensile test data in studies of artists paints is due to the interest in characterizing their large-strain response, particularly the failure criteria as a function of time and temperature. The related research work of Thor Smith in the 1960s is of interest since it shows the application of TTS to the ultimate properties of plastics and elastomers. Smith clearly summarizes an important finding in one of his many papers on this topic:
 
-> The ultimate tensile properties (the stress at break σ~b~, and the corresponding extension ratio λ~b~) vary markedly with the temperature and with the stress-time or strain-time history prior to rupture. Considerable evidence indicates that data obtained at different temperatures can often be superposed to give master curves which show the variation of σ~b~ and λ~b~ over many decades of time at a fixed temperature. Further, the temperature shift factor is the same—or nearly the same—as that used to superpose viscoelastic data representing small-deformation behavior. In other words, the same molecular parameters which influence chain mobility, thus the time and temperature dependence of linear viscoelastic response, also have a controlling effect on the time and temperature dependence of the ultimate tensile properties. ({% cite 'Smith 1965' '275' %})
+> The ultimate tensile properties (the stress at break σ<sub>b</sub>, and the corresponding extension ratio λ<sub>b</sub>) vary markedly with the temperature and with the stress-time or strain-time history prior to rupture. Considerable evidence indicates that data obtained at different temperatures can often be superposed to give master curves which show the variation of σ<sub>b</sub> and λ<sub>b</sub> over many decades of time at a fixed temperature. Further, the temperature shift factor is the same—or nearly the same—as that used to superpose viscoelastic data representing small-deformation behavior. In other words, the same molecular parameters which influence chain mobility, thus the time and temperature dependence of linear viscoelastic response, also have a controlling effect on the time and temperature dependence of the ultimate tensile properties. ({% cite 'Smith 1965' '275' %})
 {.blockquote-plain}
 
 Recent studies on artists paints have highlighted the application of this approach for generating master curves of failure strains from tensile data. ([fig. 2.7a](#fig-2-7)) shows a generalized illustration of a failure envelope created using a similar approach to that shown for modulus data (see [fig. 2.5](#fig-2-5)). The path to point A results in failure before reaching the target strain at the defined strain rate. Reducing the strain rate avoids failure for the path to point B, which is outside of the failure envelope. ([fig. 2.7b](#fig-2-7)) shows the path to point C outside of the failure envelope due to a horizontal shift of the master curve from a temperature increase or possibly a plasticizing effect (e.g., increased moisture content). Combining higher temperature and reduced strain rate locates point D even further from the failure line.
 
 {% figure 'fig-2-7' %}
 
-This concept of a failure strain mastercurve is also shown in figure 2.8 using tensile data from two artists paint films at *T~ref~* = 20°C ({% cite 'Hagan 2017' %}). The acrylic paint film ([fig. 2.8a](#fig-2-8)) shows a considerably larger combination of strains and strain rates that avoid failure compared to the oil paint ([fig. 2.8b](#fig-2-8)). This illustrates why cracking of acrylics latex paints is much less common than traditional oils over a wide range of conditions.
+This concept of a failure strain mastercurve is also shown in figure 2.8 using tensile data from two artists paint films at *T<sub>ref</sub>* = 20°C ({% cite 'Hagan 2017' %}). The acrylic paint film ([fig. 2.8a](#fig-2-8)) shows a considerably larger combination of strains and strain rates that avoid failure compared to the oil paint ([fig. 2.8b](#fig-2-8)). This illustrates why cracking of acrylics latex paints is much less common than traditional oils over a wide range of conditions.
 
 {% figure 'fig-2-8' %}
 
