--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -108,7 +108,7 @@ The second solution consists of a methyl hydroxyethyl cellulose–CNC nanocompos
 
 #### Multilayered nanoparticle treatment (solution 3)
 
-The last solution proposed for canvas consolidation consists of polyelectrolyte-treated silica nanoparticles (SNPs) and CaCO~3~ NPs (CaNPs). Silica nanoparticles have already proven to be good candidates for textile and paper reinforcement ({% cite 'Gärdlund, Wågberg, and Gernandt 2003' %}; {% cite 'Tan, Tay, and Teo 2005' %}) due to their small particle size and the possibility to chemically modify their surface to tune their affinity for cellulose fibers, while alkaline nanoparticles have been widely used for the deacidification of textiles and paper ({% cite 'Giorgi et al. 2002' %}; {% cite 'Baglioni et al. 2013' %}). The mixture of CaNPs and SNPs was designed to address mechanical reinforcement and deacidification with a single-step treatment. Both types of nanoparticles are functionalized first with a cationic polyelectrolyte (PEI) and then, as the outer layer, by the anionic sodium carboxymethyl cellulose (CMC). The detailed preparation procedure is reported elsewhere ({% cite 'Kolman et al. 2017' %}; {% cite 'Kolman et al. 2019' %}; {% cite 'Palladino et al. 2020' %}).
+The last solution proposed for canvas consolidation consists of polyelectrolyte-treated silica nanoparticles (SNPs) and CaCO<sub>3</sub> NPs (CaNPs). Silica nanoparticles have already proven to be good candidates for textile and paper reinforcement ({% cite 'Gärdlund, Wågberg, and Gernandt 2003' %}; {% cite 'Tan, Tay, and Teo 2005' %}) due to their small particle size and the possibility to chemically modify their surface to tune their affinity for cellulose fibers, while alkaline nanoparticles have been widely used for the deacidification of textiles and paper ({% cite 'Giorgi et al. 2002' %}; {% cite 'Baglioni et al. 2013' %}). The mixture of CaNPs and SNPs was designed to address mechanical reinforcement and deacidification with a single-step treatment. Both types of nanoparticles are functionalized first with a cationic polyelectrolyte (PEI) and then, as the outer layer, by the anionic sodium carboxymethyl cellulose (CMC). The detailed preparation procedure is reported elsewhere ({% cite 'Kolman et al. 2017' %}; {% cite 'Kolman et al. 2019' %}; {% cite 'Palladino et al. 2020' %}).
 
 Solutions 1 and 2 were applied to degraded cotton canvases by spraying and brushing and solution 3 by spraying only. The amounts applied result in weight uptakes of the canvases between 1.8% and 22.1% ([table 27.1](#table-27-1)).
 
@@ -164,7 +164,7 @@ By observing the high penetration and bulk consolidation reached by multilayered
 
 Mechanical stresses experienced by a painting are also often caused by environmental factors, such as variations in relative humidity (RH) and temperature (T). Some constitutive layers of a painting are hydrophilic and highly responsive to RH, while others are less so. Cotton and linen canvases are moisture-sensitive supports. At 65% RH, linen and cotton can take up moisture to 12% and 8.5% in mass, respectively ({% cite 'Hill, Norton, and Newman 2009' %}). The individual layers also present differential mechanical responses to fluctuations in RH and T. Mecklenburg and Hedley have shown that canvas and glue layers, being responsive to moisture, will swell or contract and respond faster than other layers to RH changes ({% cite 'Mecklenburg 1982' %}; {% cite 'Hedley 1988' %}). The glue layer will become more brittle or more plastic at low and high RH levels, respectively. The canvas in contrast will develop greater forces above 80% RH. A more hydrophobic material, such as the paint layer, will be more sensitive to change in temperature. These differential behaviors toward RH and T variations observed between constitutive layers of a painting can lead to the building up of strong shear and tensile stresses, which are stresses that are coplanar and perpendicular, respectively, to the face of the material on which the load is acting. As a result, delamination or the rupture of the different layers resulting from the release of the accumulated tension can occur and spread onto and across the entire painting ({% cite 'Bergeaud, Hulot, and Roche 1997' %}; {% cite 'Karpowicz 1989' %}).
 
-The response of samples to moisture was tested using DMA with RH-cycling. [Fig. 27.3](#fig-27-3) demonstrates the similar mechanical behavior of the treated samples—CNF, CCNF, and MC+CNC (h)—characterized by successive decreases in storage modulus (*E'*) (stiffness) with RH increase (80% RH), and then increases in stiffness with RH decrease (20% RH). The magnitude of the response, however, varies between samples ([table 27.2](#table-27-2)). Differences in *E'* between 20% and 80% RH plateau over the three RH cycles (Δ*E'~20%–80% RH~*) show the highest value for the CNF-treated sample (Δ*E'~20%–80% RH~* =12.9±1.8 MPa) and lower values for untreated and MC+CNC (h) samples (Δ*E'~20%–80% RH~* =7.6±0.2 MPa and 8.3±0.9 MPa, respectively). Overall, these results and previous studies have shown that the change in stiffness of the treated samples remains higher than for the untreated canvas, except for CNC-treated samples tested using 20%–60% RH cycles ({% cite 'Bridarolli et al. 2018b' %}; {% cite 'Bridarolli 2019' %}). It is yet to be understood whether the magnitude of these changes in stiffness would pose a risk to paintings.
+The response of samples to moisture was tested using DMA with RH-cycling. [Fig. 27.3](#fig-27-3) demonstrates the similar mechanical behavior of the treated samples—CNF, CCNF, and MC+CNC (h)—characterized by successive decreases in storage modulus (*E'*) (stiffness) with RH increase (80% RH), and then increases in stiffness with RH decrease (20% RH). The magnitude of the response, however, varies between samples ([table 27.2](#table-27-2)). Differences in *E'* between 20% and 80% RH plateau over the three RH cycles (Δ*E'<sub>20%–80% RH</sub>*) show the highest value for the CNF-treated sample (Δ*E'<sub>20%–80% RH</sub>* =12.9±1.8 MPa) and lower values for untreated and MC+CNC (h) samples (Δ*E'<sub>20%–80% RH</sub>* =7.6±0.2 MPa and 8.3±0.9 MPa, respectively). Overall, these results and previous studies have shown that the change in stiffness of the treated samples remains higher than for the untreated canvas, except for CNC-treated samples tested using 20%–60% RH cycles ({% cite 'Bridarolli et al. 2018b' %}; {% cite 'Bridarolli 2019' %}). It is yet to be understood whether the magnitude of these changes in stiffness would pose a risk to paintings.
 
 {% figure 'fig-27-3' %}
 
@@ -174,13 +174,13 @@ The response of samples to moisture was tested using DMA with RH-cycling. [Fig. 
 
 Visual assessment as well as handling properties of the treatments were evaluated on different occasions in the framework of the Nanorestart project by a small group of painting conservators, and results were recently published ({% cite 'Oriola-Folch et al. 2020' %}; {% cite 'Böhme et al. 2020' %}). Tests were carried out on modern linen, cotton, and jute canvases; on historical lining canvases (linen); and on nineteenth- and twentieth-century acrylic- and oil-based paintings on linen and cotton canvases. Overall, the authors reported that all the new products performed well on white cotton canvases. On darker canvases, most of the treatments showed minimal color change, especially compared to the traditional animal glue consolidant, which darkens canvases ({% cite 'Oriola-Folch et al. 2020' %}). The only exceptions were the heptane-based nanocomposites, which strongly whiten the canvas, especially the formulation mixed with nanoparticles of MgO. (This was part of a strategy combining consolidation with canvas deacidification.) Change in gloss was also observed only for the heptane-based nanocomposites.
 
-Following these evaluations, further mechanical tests were carried out using one of the lining canvases found in Böhme’s study ({% cite 'Böhme et al. 2020' %}). The protocol developed for these tests enabled assessment of the treatments on more representative canvases (historical material, naturally aged, soiled, and with traces of one or more glues) while minimizing the variability due to the inhomogeneous nature of these materials. For these final tests, the water-based and heptane-based nanocomposites tested were mixed with deacidification agents: CaCO~3~ and MgO, respectively. The presence of CaCO~3~ had been shown not to affect the reinforcement provided by MC+CNC in water ({% cite 'Bridarolli 2019' %}). Canvases treated with the solvents used in the treatments were also tested in order to isolate the impact of the treatment from the solvent itself.
+Following these evaluations, further mechanical tests were carried out using one of the lining canvases found in Böhme’s study ({% cite 'Böhme et al. 2020' %}). The protocol developed for these tests enabled assessment of the treatments on more representative canvases (historical material, naturally aged, soiled, and with traces of one or more glues) while minimizing the variability due to the inhomogeneous nature of these materials. For these final tests, the water-based and heptane-based nanocomposites tested were mixed with deacidification agents: CaCO<sub>3</sub> and MgO, respectively. The presence of CaCO<sub>3</sub> had been shown not to affect the reinforcement provided by MC+CNC in water ({% cite 'Bridarolli 2019' %}). Canvases treated with the solvents used in the treatments were also tested in order to isolate the impact of the treatment from the solvent itself.
 
-[Fig. 27.4](#fig-27-4) shows the calculated percentage increase in storage modulus *E'* (30% RH, 25°C, 30 min. equilibration) measured for the linen canvas samples and resulting from the application of the treatments. All led to the consolidation of the historical canvases, seen in the increase in stiffness (*E'*). The greatest increase in *E'* was reached with the MC+CNC+CaCO~3 ~(w) treatment (increase of 126% ±30%), followed by CNF (83% ±24%) and CCNF (53% ±17%). The high level of stiffening reached using MC+CNC+CaCO~3 ~(w) was not observed for its counterpart, the heptane-based treatment MC + CNC + MgO (h) (25 ±10%), nor was it for the multilayered NPs (20% ±17%). The limited consolidation conferred by the latter on the historical linen canvas calls for further research, as this contradicts previous tensile testing results performed on degraded modern cotton canvases (see [table 27.1](#table-27-1)).
+[Fig. 27.4](#fig-27-4) shows the calculated percentage increase in storage modulus *E'* (30% RH, 25°C, 30 min. equilibration) measured for the linen canvas samples and resulting from the application of the treatments. All led to the consolidation of the historical canvases, seen in the increase in stiffness (*E'*). The greatest increase in *E'* was reached with the MC+CNC+CaCO<sub>3</sub> (w) treatment (increase of 126% ±30%), followed by CNF (83% ±24%) and CCNF (53% ±17%). The high level of stiffening reached using MC+CNC+CaCO<sub>3</sub> (w) was not observed for its counterpart, the heptane-based treatment MC + CNC + MgO (h) (25 ±10%), nor was it for the multilayered NPs (20% ±17%). The limited consolidation conferred by the latter on the historical linen canvas calls for further research, as this contradicts previous tensile testing results performed on degraded modern cotton canvases (see [table 27.1](#table-27-1)).
 
 {% figure 'fig-27-4' %}
 
-The results on historical lining canvas confirm those obtained on degraded modern cotton canvases. They also show that the inherent presence of traces of glue or oil-based substances on historical canvases may inevitability lead to modifications of their mechanical properties through the application of solvent alone. The application of water alone led to a significant increase in canvas’s stiffness (\~22%) in comparison to heptane, which tends to soften the canvas (see [fig. 27.4](#fig-27-4)). This could explain the higher consolidation reached for the MC+CNC+CaCO~3 ~(w) treatment compared to CNF, CCNF, and CNC treatments, which was not observed when testing the degraded modern cotton canvas (see [table 27.1](#table-27-1)). Due to the higher viscosity of MC+CNC+CaCO~3 ~(w) at 2% w/w in comparison to CNF and CCNF, it is possible that the canvas might have been exposed for a longer time to the water present in the MC+CNC+CaCO~3 ~(w) gel. This would have given more time for the remains of glue present in the lining canvas to swell and reform in a renewed sizing layer.
+The results on historical lining canvas confirm those obtained on degraded modern cotton canvases. They also show that the inherent presence of traces of glue or oil-based substances on historical canvases may inevitability lead to modifications of their mechanical properties through the application of solvent alone. The application of water alone led to a significant increase in canvas’s stiffness (\~22%) in comparison to heptane, which tends to soften the canvas (see [fig. 27.4](#fig-27-4)). This could explain the higher consolidation reached for the MC+CNC+CaCO<sub>3</sub> (w) treatment compared to CNF, CCNF, and CNC treatments, which was not observed when testing the degraded modern cotton canvas (see [table 27.1](#table-27-1)). Due to the higher viscosity of MC+CNC+CaCO<sub>3</sub> (w) at 2% w/w in comparison to CNF and CCNF, it is possible that the canvas might have been exposed for a longer time to the water present in the MC+CNC+CaCO<sub>3</sub> (w) gel. This would have given more time for the remains of glue present in the lining canvas to swell and reform in a renewed sizing layer.
 
 ### Summary of Effects of the Treatments on Modern Degraded Cotton and Historical Linen Samples
 
