--- a/content/5-adhesives/29.md
+++ b/content/5-adhesives/29.md
@@ -126,17 +126,17 @@ The uniaxially tested fabric strips were 12 threads wide, and each thread was me
 
 ## Evaluation of Single-Thread Bonds
 
-To illustrate the tendencies, all figures show only the average maximum tensile forces (F~max~) as the result of uniaxial short-term testing until bond failure. These results are suitable for indicating a maximum strength as part of a general *relative adhesive comparison*: in general, all types of tests are dependent on the parameters selected, so that absolute measured values must always be embedded in the context of the respective tests and their details, while relative comparisons of adhesives and bonding techniques also reveal transferable tendencies.
+To illustrate the tendencies, all figures show only the average maximum tensile forces (F<sub>max</sub>) as the result of uniaxial short-term testing until bond failure. These results are suitable for indicating a maximum strength as part of a general *relative adhesive comparison*: in general, all types of tests are dependent on the parameters selected, so that absolute measured values must always be embedded in the context of the respective tests and their details, while relative comparisons of adhesives and bonding techniques also reveal transferable tendencies.
 
 However, it has to be considered that in reality, the resulting stresses[^17] and strains are crucial. Moreover, a suitable bond is characterized not only by the highest possible maximum tensile forces (in the short-term test): the viscous, time-dependent material properties of canvas paintings and single-thread bonds, even with much lower long-term exposure, are ultimately decisive.
 
 ### Inherent Scatters
 
-Since the test series have been repeated several times over the last years, two average measured F~max~ values are shown in [fig. 29.2](#fig-29-2). For each of the different adhesives and bonding techniques, the lowest and highest F~max~ mean values from all test series up to 2019 are presented. The order does not correspond to any chronological sequence. Although the exact same test setup and experimental design (test specimen preparation, testing,[^18] and evaluation) were always followed, and at least ten to twenty test specimens of one type were tested each time, the average mean values are hardly reproducible due to scattering results.
+Since the test series have been repeated several times over the last years, two average measured F<sub>max</sub> values are shown in [fig. 29.2](#fig-29-2). For each of the different adhesives and bonding techniques, the lowest and highest F<sub>max</sub> mean values from all test series up to 2019 are presented. The order does not correspond to any chronological sequence. Although the exact same test setup and experimental design (test specimen preparation, testing,[^18] and evaluation) were always followed, and at least ten to twenty test specimens of one type were tested each time, the average mean values are hardly reproducible due to scattering results.
 
 {% figure 'fig-29-2' %}
 
-Because [fig. 29.2](#fig-29-2) shows overall low and high average measured values, standard deviations as absolute scatter measures in the diagrams were omitted. Instead, [fig. 29.3](#fig-29-3) shows the relative coefficients of variation corresponding to [fig. 29.2](#fig-29-2). The variation coefficients of F~max~ lie within a range of approximately 6%–30% (in one case almost 40%), which corresponds to quite a large range of individual measured values from which the mean value is derived. In comparison, the variation coefficient of intact canvas samples shows a value of only approximately 6%, which probably results from variations in the natural fiber and the canvas production. Therefore, bonding causes the scattering of the measured values of all adhesives tested.
+Because [fig. 29.2](#fig-29-2) shows overall low and high average measured values, standard deviations as absolute scatter measures in the diagrams were omitted. Instead, [fig. 29.3](#fig-29-3) shows the relative coefficients of variation corresponding to [fig. 29.2](#fig-29-2). The variation coefficients of F<sub>max</sub> lie within a range of approximately 6%–30% (in one case almost 40%), which corresponds to quite a large range of individual measured values from which the mean value is derived. In comparison, the variation coefficient of intact canvas samples shows a value of only approximately 6%, which probably results from variations in the natural fiber and the canvas production. Therefore, bonding causes the scattering of the measured values of all adhesives tested.
 
 {% figure 'fig-29-3' %}
 
@@ -144,7 +144,7 @@ Extensive investigations into this problem made clear that the scattering is to 
 
 ### Bonding Technique Evaluation
 
-To aid the clarity of the figure scaling, the intact references without bonds are not shown in [fig. 29.2](#fig-29-2): the F~max~ of the intact canvas strips was approximately 270 N on arithmetic mean.[^20] The average F~max~ of the bonded joints, using the four different adhesives in different joining situations, is always less than the strength of the intact canvas.
+To aid the clarity of the figure scaling, the intact references without bonds are not shown in [fig. 29.2](#fig-29-2): the F<sub>max</sub> of the intact canvas strips was approximately 270 N on arithmetic mean.[^20] The average F<sub>max</sub> of the bonded joints, using the four different adhesives in different joining situations, is always less than the strength of the intact canvas.
 
 Regarding the different types of bonding, a successive increase can be noted for all adhesives from butt joints to butt joints with bridging threads to simple overlapping joints and to overlapping joints with intermingled fibers of the thread ends. The enlargement of the bonding surface and mechanical anchoring result in an improved force transmission and thus higher maximum strengths.
 
@@ -272,7 +272,7 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^31]: Arbocel fibers were considered as midlength fibers with 120–200 µm: a minimum length of 40 µm and a maximum of 300 µm were investigated. However, this does not directly indicate what the critical lower and upper fiber length limits are.
 
-[^32]: The coefficients of variation (CV of F~max~) slightly differ between approximately 15% and 21% ({% cite 'Flock et al. 2019' '122' %}).
+[^32]: The coefficients of variation (CV of F<sub>max</sub>) slightly differ between approximately 15% and 21% ({% cite 'Flock et al. 2019' '122' %}).
 
 [^33]: Regarding average bond strengths, total strains of the test specimens, and variation coefficients: see {% cite 'Flock et al. 2019' '122' %}.
 
