--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -35,7 +35,7 @@ By combining equations from geometry with Timoshenko’s equation for curvature 
 
 The size layer is not considered in this model for curl (equations for a three-layer system are beyond the scope of this paper). However, one can expect shrinkage of the size layer to counteract shrinkage of the paint layer, especially at low humidities, but in Hough’s measurements of curl in the experimental samples (see Profile Measurement below), curl definitely increased with lower relative humidity (RH) ({% cite 'Hough 2000' 'fig. 11' %}),[^5] showing that shrinkage of the paint layer dominated shrinkage of the size layer. We can qualify this simple two-layer model for curl, paint-ground, as an estimate of the maximum expected curl.
 
-Where the painting is cracked, the canvas acts as a hinge (see [fig. 40.1b](#fig-40-1)). Curl is then limited by the surrounding area of painting plus any overall tension in the painting. If the painting is keyed out, the canvas hinge and the cupping are pulled toward flatness, but this flattening reaches a limit when the canvas hinge aligns with the center of the tension located in the size, ground, and paint layers of the uncracked regions.[^6] Cupping cannot be flattened beyond this limit no matter how much tension is applied. This flattening limit h~align~ is equal to at least half the combined thickness of canvas, size, and ground (for low-stiffness paint) and at most half the combined thickness of canvas, size, ground, and paint (for high-stiffness paints). In [fig. 40.1b](#fig-40-1), the simplest situation has been assumed, where the red line is in the middle of the size-ground-paint laminate.
+Where the painting is cracked, the canvas acts as a hinge (see [fig. 40.1b](#fig-40-1)). Curl is then limited by the surrounding area of painting plus any overall tension in the painting. If the painting is keyed out, the canvas hinge and the cupping are pulled toward flatness, but this flattening reaches a limit when the canvas hinge aligns with the center of the tension located in the size, ground, and paint layers of the uncracked regions.[^6] Cupping cannot be flattened beyond this limit no matter how much tension is applied. This flattening limit h<sub>align</sub> is equal to at least half the combined thickness of canvas, size, and ground (for low-stiffness paint) and at most half the combined thickness of canvas, size, ground, and paint (for high-stiffness paints). In [fig. 40.1b](#fig-40-1), the simplest situation has been assumed, where the red line is in the middle of the size-ground-paint laminate.
 
 ### Surfacing Mechanisms
 
