--- a/content/8-posters/61.md
+++ b/content/8-posters/61.md
@@ -40,7 +40,7 @@ After this first painting, MacKenzie subsequently painted the same scene on a sl
 
 In 2016, during a survey of the museum’s holdings, it was discovered that the magnificent and historically important painting *Delhi Durbar 1903* (the second largest painting in the museum’s collection at 340 x 544 cm), had developed a termite channel vertically on the back between the stretcher and canvas. The high humidity of a tropical climatic zone like Kolkata places artworks at high risk of biodeterioration. It is impossible to fully prevent the development of a termite colony inside a century-old building like Victoria Memorial Hall, particularly as it is surrounded by fifty-seven acres of gardens. Despite regular monitoring and our other efforts, we could not prevent termite attacks on our precious collections.
 
-Nonetheless, this type of loss was an eye opener, and action was taken immediately to eliminate the living elements, followed by necessary conservation treatment. The assignment to conserve such a historically important painting was both an honor and ~~a~~ challenge. As conservators, we were grateful for the opportunity.
+Nonetheless, this type of loss was an eye opener, and action was taken immediately to eliminate the living elements, followed by necessary conservation treatment. The assignment to conserve such a historically important painting was both an honor and a challenge. As conservators, we were grateful for the opportunity.
 
 ## Condition
 
