--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -86,7 +86,7 @@ For conducting a measurement for one canvas, the following steps were performed:
 
     {% figure 'fig-16-2' %}
 
-2.  To obtain a statistically significant result for the tensile strength for one canvas, it was necessary to measure twelve yarn sections with 5 mm length each. From the maximum tensile load measured in newtons, the diameter-normalized maximal tensile strength (*f~H~*) was calculated following *f*~H~ = F/Tt with Tt = fineness (in units of tex) in order to compare yarns of different fineness ({% cite 'Reumann 2000' %}).
+2.  To obtain a statistically significant result for the tensile strength for one canvas, it was necessary to measure twelve yarn sections with 5 mm length each. From the maximum tensile load measured in newtons, the diameter-normalized maximal tensile strength (*f<sub>H</sub>*) was calculated following *f*<sub>H</sub> = F/Tt with Tt = fineness (in units of tex) in order to compare yarns of different fineness ({% cite 'Reumann 2000' %}).
 
 3.  To determine the fineness, the mass was divided by the length of the yarn ({% cite 'Hartwig and Reumann 2000' %}).
 
@@ -96,7 +96,7 @@ For conducting a measurement for one canvas, the following steps were performed:
 
 The average degree of polymerization has been established in the field of conservation research to describe the degree of decomposition and the molecular condition of cellulose ({% cite 'Stoll and Fengel 1981' %}). The degree of polymerization is calculated based on the experimentally determined limiting viscosity number. However, for this calculation different methods have been described, leading to different results ({% cite 'Stoll and Fengel 1981' %}). Thus, in order to directly compare results from different studies, the standard DIN 54 270 part 1 suggests omitting the calculation of the degree of polymerization and instead using the limiting viscosity number as the reference value ({% cite 'DIN 1976' %}). Just like the degree of polymerization, the limiting viscosity number increases as the chain length of the cellulose molecules increases.
 
-The intrinsic viscosity of all yarn samples was determined using capillary viscometry. This method allows investigation of original sample material as well, since the necessary sample amount is less than 15 mg. All experiments were performed according to the standard DIN 54 270 part 3 ({% cite 'DIN 1977' %}), with minor modifications ({% cite 'Bräunig et al. 2016' %}). The basic principle is as follows: The yarn sample is disassembled into single fibers, then dissolved in alkaline iron tartrate system (in German EWNN~mod(NaCl)~), and the viscosity of the resulting solution is determined using a Micro-Ubbelohde viscometer. The time required for a defined volume of a test liquid to pass a defined distance in a capillary of a known diameter is used to calculate the kinematic viscosity of that liquid. The dissolved cellulose sample is inserted into the viscometer, aspirated, and then the flow time back through the device caused by gravity is measured (twice per sample) with two independent fillings. The result given here is the mean value of the two measurements.
+The intrinsic viscosity of all yarn samples was determined using capillary viscometry. This method allows investigation of original sample material as well, since the necessary sample amount is less than 15 mg. All experiments were performed according to the standard DIN 54 270 part 3 ({% cite 'DIN 1977' %}), with minor modifications ({% cite 'Bräunig et al. 2016' %}). The basic principle is as follows: The yarn sample is disassembled into single fibers, then dissolved in alkaline iron tartrate system (in German EWNN<sub>mod(NaCl)</sub>), and the viscosity of the resulting solution is determined using a Micro-Ubbelohde viscometer. The time required for a defined volume of a test liquid to pass a defined distance in a capillary of a known diameter is used to calculate the kinematic viscosity of that liquid. The dissolved cellulose sample is inserted into the viscometer, aspirated, and then the flow time back through the device caused by gravity is measured (twice per sample) with two independent fillings. The result given here is the mean value of the two measurements.
 
 ### Sample Material and Preparation
 
@@ -106,17 +106,17 @@ From the new and artificially aged fabrics, samples of warp and weft were taken 
 
 ## Results
 
-The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [Fig. 16.3a](#fig-16-3) shows the average of the diameter-normalized maximum tensile strength (*f~H~* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging show the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
+The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [Fig. 16.3a](#fig-16-3) shows the average of the diameter-normalized maximum tensile strength (*f<sub>H</sub>* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging show the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
 
 {% figure 'fig-16-3' %}
 
 For the historical yarn samples from the nineteenth and twentieth centuries (H1U20–H10K19) the strength decreases with increasing age. In the region with the lowest strength, measured on the samples from the sixteenth to eighteenth centuries, the strength does not correlate with the age. Probably, the strength of these samples is more strongly influenced by further factors, such as aging conditions, pretreatment, and painting technique.
 
-[Fig. 16.3b](#fig-16-3) shows the results of the capillary viscometry experiments. The analyzed yarn samples cover a broad spectrum of limiting viscosity numbers (GVZ in units of ml/g), which, in contrast to the diameter-normalized maximum tensile strength values (*f~H~*; see [fig. 16.3a](#fig-16-3)), show a smaller gap between the artificially and the historically aged samples. Overall, the values lie between 250 and 1976 ml/g. High values were obtained from the new and artificially aged samples. In line with the results of tensile strength (see [fig. 16.3a](#fig-16-3)), the warps show higher values than the wefts. This phenomenon can be explained by the different yarn quality of the two groups. While the warps in these samples consisted of doubling folded yarns with long single fibers, the wefts were yarns with short single fibers.
+[Fig. 16.3b](#fig-16-3) shows the results of the capillary viscometry experiments. The analyzed yarn samples cover a broad spectrum of limiting viscosity numbers (GVZ in units of ml/g), which, in contrast to the diameter-normalized maximum tensile strength values (*f<sub>H</sub>*; see [fig. 16.3a](#fig-16-3)), show a smaller gap between the artificially and the historically aged samples. Overall, the values lie between 250 and 1976 ml/g. High values were obtained from the new and artificially aged samples. In line with the results of tensile strength (see [fig. 16.3a](#fig-16-3)), the warps show higher values than the wefts. This phenomenon can be explained by the different yarn quality of the two groups. While the warps in these samples consisted of doubling folded yarns with long single fibers, the wefts were yarns with short single fibers.
 
 Surprisingly, we observed an anomaly for the artificially aged wefts that is consistent throughout both methods: the wefts that were aged longer show slightly higher values than wefts aged for shorter periods. Since this phenomenon appears with both methods, the result seems to be sample specific. This anomaly could be caused by the inhomogeneity of the material. In comparison, the historical samples generally show lower values. For technical reasons, the viscosity measurements were conducted at two different temperatures (18°C and 19°C, shown in [fig. 16.3b](#fig-16-3) in light and dark gray, respectively).
 
-The correlation of the data determined by the two different methods is plotted in [fig. 16.4](#fig-16-4): the degree of polymerization of the cellulose, represented by the limiting viscosity number (GVZ), and the strength of the tested yarn samples (*f~H~*), measured by our newly developed protocol. Due to the strong dependence of the viscosity measurement on temperature, the experiments at 18°C and 19°C are plotted separately. For both temperatures, a clear correlation of the limiting viscosity number with the diameter-normalized maximum tensile strength can be found. The data points can be grouped into two separate populations: low strength (*f~H~* \< 0.008 N/tex), consisting of the naturally aged samples, and high strength (*f~H~* \> 0.017 N/tex), consisting of new and artificially aged samples. In summary, a linear correlation is observed over the whole data set.
+The correlation of the data determined by the two different methods is plotted in [fig. 16.4](#fig-16-4): the degree of polymerization of the cellulose, represented by the limiting viscosity number (GVZ), and the strength of the tested yarn samples (*f<sub>H</sub>*), measured by our newly developed protocol. Due to the strong dependence of the viscosity measurement on temperature, the experiments at 18°C and 19°C are plotted separately. For both temperatures, a clear correlation of the limiting viscosity number with the diameter-normalized maximum tensile strength can be found. The data points can be grouped into two separate populations: low strength (*f<sub>H</sub>* \< 0.008 N/tex), consisting of the naturally aged samples, and high strength (*f<sub>H</sub>* \> 0.017 N/tex), consisting of new and artificially aged samples. In summary, a linear correlation is observed over the whole data set.
 
 {% figure 'fig-16-4' %}
 
