Add missing em-dash

--- a/content/4-case-studies/25.md
+++ b/content/4-case-studies/25.md
@@ -104,7 +104,7 @@ The heterogeneous mixture they used looked plastic and grainy. The artists, in p
 
 > It was expensive to exhibit my work in galleries, so I often had to display my paintings at the famous Bikeko market in Kinshasa-Gombe. The paintings were exposed to the hot sun the whole day, and the problem is that the inks I used weren’t resistant to the sunlight, so the paint cracked very quickly. I think that was the reason behind the accelerated deterioration of the paint.
 >
-> Ange Kumbi[^9]
+> —Ange Kumbi[^9]
 
 The consistent features of these artists’ technique are that the supports are used without any preparation, and they are often frayed; the ground layer is a mixture that cracks quickly; and the paint layer is ink from a printer or composed of a heterogeneous mixture of house paint, palm oil, and other compounds. This combination has considerable potential for rapid degradation. To date, my observations are based on close visual examination, but this has led to a better understanding of the damage. Due to the diverse techniques and materials found, each of the paintings is unique and the alterations and the effects of deterioration differ greatly.
 
